Implementing clojure backend to run within 32mb!!!!